[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
disjoint-sets = "0.4.2"
geo = "0.27.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
pico-args = "0.5.0"
rand = "0.8.5"
ranges = "0.3.3"
regex = "1.10.2"
